fixed map styling to prevent overlap with other divs

--- a/client-dev-app/src/sass/containers/_chartview.scss
+++ b/client-dev-app/src/sass/containers/_chartview.scss
@@ -36,6 +36,12 @@
 
 #map1{
   height: 75vh;
+  overflow: hidden;
+}
+
+
+.leaflet-map-pane {
+  padding-top: 25px;
 }
 
 .info{
