--- a/client-dev-app/src/styles/index.css
+++ b/client-dev-app/src/styles/index.css
@@ -61,6 +61,11 @@
 
 #map1{
   height: 75vh;
+  overflow: hidden;
+}
+
+.leaflet-map-pane {
+  padding-top: 25px;
 }
 
 .info{
